# movie-rec-system-knn

./: .gitignore  README.md  app.py  main.py  pyproject.toml
locales/: en.json  pt.json
src/models/: evaluator.py  knn_recommender.py  svd_recommender.py
src/preprocessing/: data_loader.py  matrix_builder.py
src/utils/: translator.py
