[project]
name = "movie-rec-system"
version = "0.1.0"
description = "Movie recomendation system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "scikit-surprise>=1.1.4",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "streamlit>=1.55.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
